J'ai essayer de tous passer sur une interface graphique, c'est facile faut juste réecrire tous en remplacant System.out.println en console.println et rempalcer les scanner par des console.getInput()
Ce qu'il reste a faire de plus :
-modifier rexAdjascent pour avoir bien une plus grande zone d'invasion (ce qui est demandé)
-mieux ranger les methodes et mieux organiser le code

Sinon le jeux marchent parfaitement il se peut qu'il y est des choses que je n'ai pas ou mal compris et donc a changer mais en soit deja la on a presque la version console pret.