@@ -161,16 +161,23 @@ public class Game {
     public static void main(String[] args) {
         Game game = Game.getInstance();
         Plateau jeux = new Plateau();
+
+        System.out.println("Bienvenue dans le jeu de Pocket Imperium !");
+        System.out.println("A quelle version du jeux souhaitez-vous jouer ?");
+
+        System.out.println("1 - Console \n 2- GUI");
+
+        int choixConsGUI = -1;
+
         try (Scanner scanner = new Scanner(System.in)) {
-            int nombreJoueurs = -1;
 
             // Demander le nombre de joueurs réels
-            while (nombreJoueurs < 0 || nombreJoueurs > 4) {
-                System.out.println("Combien de joueurs réels vont jouer ? (0 à 4)");
+            while (choixConsGUI < 1 || choixConsGUI > 2) {
+                System.out.println("Combien de joueurs réels vont jouer ? (1 à 2)");
                 try {
-                    nombreJoueurs = scanner.nextInt();
-                    if (nombreJoueurs < 0 || nombreJoueurs > 4) {
-                        System.out.println("Erreur : Veuillez entrer un nombre compris entre 0 et 4.");
+                    choixConsGUI = scanner.nextInt();
+                    if (choixConsGUI < 0 || choixConsGUI > 4) {
+                        System.out.println("Erreur : Veuillez entrer un nombre compris entre 1 et 2.");
                     }
                 } catch (InputMismatchException e) {
                     System.out.println("Erreur : Veuillez entrer un nombre entier.");
@@ -178,10 +185,113 @@ public class Game {
                 }
             }
 
+        }
+
+        if (choixConsGUI == 1){
+            try (Scanner scanner = new Scanner(System.in)) {
+                int nombreJoueurs = -1;
+
+                // Demander le nombre de joueurs réels
+                while (nombreJoueurs < 0 || nombreJoueurs > 4) {
+                    System.out.println("Combien de joueurs réels vont jouer ? (0 à 4)");
+                    try {
+                        nombreJoueurs = scanner.nextInt();
+                        if (nombreJoueurs < 0 || nombreJoueurs > 4) {
+                            System.out.println("Erreur : Veuillez entrer un nombre compris entre 0 et 4.");
+                        }
+                    } catch (InputMismatchException e) {
+                        System.out.println("Erreur : Veuillez entrer un nombre entier.");
+                        scanner.next(); // Consomme l'entrée invalide
+                    }
+                }
+
+                // Ajouter les joueurs réels
+                for (int i = 0; i < nombreJoueurs; i++) {
+                    System.out.println("Nom du joueur " + (i + 1) + " ?");
+                    String nomJoueur = scanner.next();
+                    game.addPlayer(new Player(nomJoueur, 0));
+                }
+
+                // Ajouter des joueurs virtuels pour compléter jusqu'à 4 joueurs
+                int nombreJoueursVirtuels = 4 - nombreJoueurs;
+                for (int i = 0; i < nombreJoueursVirtuels; i++) {
+                    String nomJoueurVirtuel = "Joueur Virtuel " + (i + 1);
+                    System.out.println("Ajout du joueur virtuel : " + nomJoueurVirtuel);
+                    game.addPlayer(new VirtualPlayer(nomJoueurVirtuel, 0));
+                }
+
+                // Démarrer le jeu
+                game.start();
+
+                System.out.println("Le jeux peut maintenant commencer");
+                System.out.println("Nous avons bien "+game.getPlayers().size()+" joueurs");
+
+                // Afficher l'état et la liste des joueurs
+                System.out.println("État du jeu : " + game.getState());
+                System.out.println("Liste des joueurs et leurs couleurs :");
+                for (Player player : game.getPlayers()) {
+                    System.out.println(player.getPlayerName() + " - Couleur : " + player.getColor());
+                }
+
+                for (Player player : game.getPlayers()) {                       // Placer le first ship de chaque joueur
+                    System.out.println("C'est a "+player.getPlayerName()+" de placer ces deux premiers bateaux :");
+                    player.firstShip(jeux);
+                    player.firstShip(jeux);
+                }
+
+                System.out.println("Le jeux peut mantenant commencer");
+
+                for (int i = 0; i < 9;i++){
+                    System.out.println("Les joueurs doivent choisir leur carte :");
+                    for (Player player : game.getPlayers()) {
+                        System.out.println(player.getPlayerName() + " - Couleur : " + player.getColor());
+                        player.chooseOrder();
+                    }
+
+                    List<List<Player>> SensPlayer = game.sensplayer(game);               // Occuper des cartes et calculer ordre joueur
+
+                    for (int j = 0; j < SensPlayer.size()-1; j++) {
+                        if (j == 0){
+                            System.out.println("C'est donc au tour de "+SensPlayer.getFirst().getFirst().getPlayerName());
+                        } else {
+                            System.out.println(" puis de "+SensPlayer.getFirst().get(j).getPlayerName());
+                        }
+                    }
+
+                    for (int j = 0;j < 3;j++){
+                        for (Player player : SensPlayer.get(i)) {
+                            System.out.println("C'est à "+player.getPlayerName()+" de jouer :");
+                            System.out.print(player.getPlayerName()+" joue avec la carte numero : "+SensPlayer.getFirst().get(j).getCardsId().get(j));
+                            player.Card(j, jeux);
+                        }
+                        jeux.checkPlateau();
+                    }
+                }
+
+            }
+            game.startNextRound();
+        } else if (choixConsGUI == 2){
+            ConsoleGUI console = new ConsoleGUI();
+
+            int nombreJoueurs = -1;
+
+            // Demander le nombre de joueurs réels
+            while (nombreJoueurs < 0 || nombreJoueurs > 4) {
+                console.println("Combien de joueurs réels vont jouer ? (0 à 4)");
+                try {
+                    nombreJoueurs = Integer.parseInt(console.getInput());
+                    if (nombreJoueurs < 0 || nombreJoueurs > 4) {
+                        console.println("Erreur : Veuillez entrer un nombre compris entre 0 et 4.");
+                    }
+                } catch (NumberFormatException e) {
+                    console.println("Erreur : Veuillez entrer un nombre entier.");
+                }
+            }
+
             // Ajouter les joueurs réels
             for (int i = 0; i < nombreJoueurs; i++) {
-                System.out.println("Nom du joueur " + (i + 1) + " ?");
-                String nomJoueur = scanner.next();
+                console.println("Nom du joueur " + (i + 1) + " ?");
+                String nomJoueur = console.getInput();
                 game.addPlayer(new Player(nomJoueur, 0));
             }
 
@@ -189,59 +299,59 @@ public class Game {
             int nombreJoueursVirtuels = 4 - nombreJoueurs;
             for (int i = 0; i < nombreJoueursVirtuels; i++) {
                 String nomJoueurVirtuel = "Joueur Virtuel " + (i + 1);
-                System.out.println("Ajout du joueur virtuel : " + nomJoueurVirtuel);
+                console.println("Ajout du joueur virtuel : " + nomJoueurVirtuel);
                 game.addPlayer(new VirtualPlayer(nomJoueurVirtuel, 0));
             }
 
             // Démarrer le jeu
             game.start();
-
-            System.out.println("Le jeux peut maintenant commencer");
-            System.out.println("Nous avons bien "+game.getPlayers().size()+" joueurs");
+            console.println("Le jeu peut maintenant commencer");
+            console.println("Nous avons bien " + game.getPlayers().size() + " joueurs");
 
             // Afficher l'état et la liste des joueurs
-            System.out.println("État du jeu : " + game.getState());
-            System.out.println("Liste des joueurs et leurs couleurs :");
+            console.println("État du jeu : " + game.getState());
+            console.println("Liste des joueurs et leurs couleurs :");
             for (Player player : game.getPlayers()) {
-                System.out.println(player.getPlayerName() + " - Couleur : " + player.getColor());
+                console.println(player.getPlayerName() + " - Couleur : " + player.getColor());
             }
 
-        for (Player player : game.getPlayers()) {                       // Placer le first ship de chaque joueur
-            System.out.println("C'est a "+player.getPlayerName()+" de placer ces deux premiers bateaux :");
-            player.firstShip(jeux);
-            player.firstShip(jeux);
-        }
-
-        System.out.println("Le jeux peut mantenant commencer");
-
-        for (int i = 0; i < 9;i++){
-            System.out.println("Les joueurs doivent choisir leur carte :");
+            // Placer le first ship de chaque joueur
             for (Player player : game.getPlayers()) {
-                System.out.println(player.getPlayerName() + " - Couleur : " + player.getColor());
-                player.chooseOrder();
+                console.println("C'est à " + player.getPlayerName() + " de placer ses deux premiers bateaux :");
+                player.firstShip(jeux);
+                player.firstShip(jeux);
             }
 
-            List<List<Player>> SensPlayer = game.sensplayer(game);               // Occuper des cartes et calculer ordre joueur
+            console.println("Le jeu peut maintenant commencer");
 
-            for (int j = 0; j < SensPlayer.size()-1; j++) {
-                if (j == 0){
-                    System.out.println("C'est donc au tour de "+SensPlayer.getFirst().getFirst().getPlayerName());
-                } else {
-                    System.out.println(" puis de "+SensPlayer.getFirst().get(j).getPlayerName());
+            for (int i = 0; i < 9; i++) {
+                console.println("Les joueurs doivent choisir leur carte :");
+                for (Player player : game.getPlayers()) {
+                    console.println(player.getPlayerName() + " - Couleur : " + player.getColor());
+                    player.chooseOrder();
+                }
+
+                List<List<Player>> SensPlayer = game.sensplayer(game); // Occuper des cartes et calculer l'ordre des joueurs
+
+                for (int j = 0; j < SensPlayer.size() - 1; j++) {
+                    if (j == 0) {
+                        console.println("C'est donc au tour de " + SensPlayer.get(0).get(0).getPlayerName());
+                    } else {
+                        console.println(" puis de " + SensPlayer.get(0).get(j).getPlayerName());
+                    }
+                }
+
+                for (int j = 0; j < 3; j++) {
+                    for (Player player : SensPlayer.get(i)) {
+                        console.println("C'est à " + player.getPlayerName() + " de jouer :");
+                        console.println(player.getPlayerName() + " joue avec la carte numéro : " + player.getCardsId().get(j));
+                        player.Card(j, jeux);
+                    }
+                    jeux.checkPlateau();
                 }
             }
 
-            for (int j = 0;j < 3;j++){
-                for (Player player : SensPlayer.get(i)) {
-                    System.out.println("C'est à "+player.getPlayerName()+" de jouer :");
-                    System.out.print(player.getPlayerName()+" joue avec la carte numero : "+SensPlayer.getFirst().get(j).getCardsId().get(j));
-                    player.Card(j, jeux);
-                }
-                jeux.checkPlateau();
-            }
+            game.startNextRound();
         }
-
-        }
-        game.startNextRound();
     }
 }
